<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/pronadji_prijatelje"
            android:icon="@drawable/pronadji_bt_prijatelje"
            android:title="@string/pronadji_prijatelje" />
        <item
            android:id="@+id/rang_lista"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/rang_lista" />
        <item
            android:id="@+id/dodaj_novi_objekat"
            android:icon="@drawable/ic_dodaj_objekat"
            android:title="@string/dodaj_novi_objekat" />
        <item
            android:id="@+id/izmeni_profil"
            android:icon="@drawable/ic_menu_manage"
            android:title="Izmeni profil"
            />
        <item
            android:id="@+id/odjavi_se"
            android:icon="@drawable/kikos_exit"
            android:title="@string/odjavi_se" />

    </group>



</menu>
